# proxrs-fail-1

./: Cargo.toml  example.env
src/: auth.rs  db.rs  main.rs  proxy.rs
templates/: login.html.tera  redirect.html
