[package]
name = "proxrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.3", features = ["v4"] }
thiserror = "1.0"
dotenv = "0.15"
sha2 = "0.10"
