[package]
name = "proxrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
reqwest = { version = "0.11", features = ["blocking"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.3", features = ["v4"] }
rocket_seek_stream = "0.2.5"
thiserror = "1.0"
dotenv = "0.15"
sha2 = "0.10"
tempfile = "3.5.0"
hyper = "0.14.25"
tokio = "1.27.0"
bytes = "1.4.0"
http-body-util = "0.1.0-rc.2"
